--- a/GeekNewsDemo/app/src/main/AndroidManifest.xml
+++ b/GeekNewsDemo/app/src/main/AndroidManifest.xml
@@ -16,11 +16,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".ui.MainActivity"
+            android:launchMode="singleTop"
+            android:theme="@style/MainTheme"
+            android:screenOrientation="portrait">
 
         </activity>
-        <activity android:name=".base.SimpleActivity" />
-        <activity android:name=".ui.WelcomeActivity">
+        <activity android:name=".ui.WelcomeActivity"
+            android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
