--- a/GeekNewsDemo/app/build.gradle
+++ b/GeekNewsDemo/app/build.gradle
@@ -17,7 +17,7 @@ android {
         renderscriptSupportModeEnabled true
 
         ndk {
-            abiFilters "armeabi"
+            abiFilters "armeabi","x86"
         }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -34,7 +34,7 @@ android {
     }
     packagingOptions {
         exclude "lib/mips/librealm-jni.so"
-        exclude "lib/x86/librealm-jni.so"
+//        exclude "lib/x86/librealm-jni.so"
         exclude "lib/x86_64/librealm-jni.so"
     }
 
@@ -42,7 +42,7 @@ android {
         abi {
             enable true
             reset()
-            include 'armeabi', 'armeabi-v7a', 'arm64-v8a'
+            include 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
             universalApk true
         }
     }
