--- a/GeekNewsDemo/app/build.gradle
+++ b/GeekNewsDemo/app/build.gradle
@@ -13,11 +13,11 @@ android {
         versionName rootProject.ext.android.versionName
         resConfigs "zh"
         multiDexEnabled true
-        renderscriptTargetApi 23
+        renderscriptTargetApi 25
         renderscriptSupportModeEnabled true
 
         ndk {
-            abiFilters "armeabi","x86"
+            abiFilters 'armeabi-v7a'//, 'armeabi-v7a', 'x86_64', 'arm64-v8a', mips, mips64...加入需要生成的文件夹
         }
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
@@ -34,15 +34,18 @@ android {
     }
     packagingOptions {
         exclude "lib/mips/librealm-jni.so"
-//        exclude "lib/x86/librealm-jni.so"
+        exclude "lib/x86/librealm-jni.so"
         exclude "lib/x86_64/librealm-jni.so"
+        exclude "lib/arm64-v8a/libutility.so"
+        exclude "lib/arm/libutility.so"
     }
 
     splits {
         abi {
             enable true
             reset()
-            include 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
+//            include 'armeabi', 'armeabi-v7a', 'arm64-v8a','x86'
+            include  'armeabi-v7a'
             universalApk true
         }
     }
@@ -106,4 +109,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+
+    compile project(':vitamioRecorderLibrary')
 }
